--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <li>Press "Enter" to submit each word and move to the next one.</li>
                   <li>The game ends when you complete all the words or run out of time.</li>
                 </ul>
-                <p>Good luck and have fun improving your typing speed!</p>
+                <p>Good Luck with CICD</p>
               </div>
             </div>
           </div>
